# meme_service

./: .env.img_api  .env.minio_api  .env.test  .gitignore  README.md  docker-compose.yml
img_api/: Dockerfile  main.py  pyproject.toml
img_api/gateway/: api_gateway.py
img_api/migrations/: env.py
img_api/migrations/versions/: d95cbf22b68f_init.py
img_api/repositories/: memes.py
img_api/routers/: memes.py
img_api/schemas/: __init__.py  memes.py
img_api/tests/: conftest.py  test_routes.py
img_api/utils/: config.py  errors.py  sessions.py
minio_api/: Dockerfile  main.py  pyproject.toml
minio_api/migrations/: env.py
minio_api/migrations/versions/: 18f25d907dbc_init.py
minio_api/repositories/: minio_repo.py  users.py
minio_api/routers/: minio_router.py  users.py
minio_api/schemas/: files.py  users.py
minio_api/tests/: conftest.py  test_routes.py
minio_api/utils/: add_sample_data.py  config.py  errors.py
